--- a/TICalc_Export.ipynb
+++ b/TICalc_Export.ipynb
@@ -9,10 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Needs done once.\n",
+    "!pip install PyUserInput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pymouse import PyMouse\n",
@@ -24,134 +41,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1891, 1042)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run this cell and you have 2 seconds to move the\n",
+    "# mouse to where TI-GRAPH LINK 89 appears on the screen.\n",
+    "sleep(2)\n",
+    "graphlink_pos=m.position()\n",
+    "graphlink_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep"
+    "def activate_tigraphlink(graphlink_pos=graphlink_pos):\n",
+    "    m.click(graphlink_pos[0], graphlink_pos[1])\n",
+    "    m.click(graphlink_pos[0], graphlink_pos[1])\n",
+    "    sleep(0.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sleep(2)\n",
-    "k.tap_key(k.alt_key)\n",
-    "k.tap_key(\"f\")\n",
-    "k.tap_key(\"o\")\n",
-    "sleep(1)\n",
-    "for i in range(3):\n",
+    "# Open the nth file in the current directory.\n",
+    "def open_file(n=0):\n",
+    "    activate_tigraphlink()\n",
+    "    k.tap_key(k.alt_key)\n",
+    "    k.tap_key(\"f\")\n",
+    "    k.tap_key(\"o\")\n",
+    "    sleep(1)\n",
     "    k.tap_key(k.tab_key)\n",
-    "\n",
-    "for i in range(3):\n",
-    "    k.tap_key(k.down_key)\n",
-    "    \n",
-    "for i in range(5):\n",
-    "    k.tap_key(k.tab_key)\n",
-    "n=1\n",
-    "for i in range(n):\n",
-    "    k.tap_key(k.down_key)\n",
-    "    \n",
-    "k.tap_key(k.enter_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def key_seq(S):\n",
-    "    for key in S:\n",
-    "        k.tap_key(key)\n",
-    "        sleep(0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "3, 4, 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def export_ti89(section=3, thing=1):\n",
-    "    # Clear out to main TI Graph Link\n",
-    "    key_seq([k.escape_key,]*3)\n",
-    "\n",
-    "    key_seq([k.alt_key, \"f\", \"o\"])\n",
-    "    key_seq(3*[k.tab_key]) \n",
-    "    \n",
-    "    key_seq(section*[k.down_key])\n",
-    "\n",
-    "    # Go back to the top\n",
-    "    k.press_key(k.shift_key)\n",
-    "    key_seq(2*[k.tab_key])\n",
-    "    k.release_key(k.shift_key)\n",
-    "    \n",
-    "    # Se\n",
-    "    key_seq(1*[k.down_key])\n",
-    "    thing-=1\n",
-    "    \n",
-    "    pg_downs , arrow_downs = divmod(thing, 5)\n",
-    "    key_seq(pg_downs*[k.page_down_key])\n",
-    "    key_seq(arrow_downs*[k.down_key])\n",
-    "    \n",
+    "    for _ in range(n+1):\n",
+    "        k.tap_key(k.down_key)\n",
+    "        sleep(0.1)\n",
     "    k.tap_key(k.enter_key)\n",
+    "open_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_file(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_file(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the file as a plain text file.\n",
+    "def export_file():\n",
+    "    activate_tigraphlink()\n",
+    "    k.tap_key(k.alt_key)\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(\"t\")\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(\"e\")\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(k.down_key)\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(k.enter_key)\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(k.enter_key)\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(k.escape_key)    \n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(k.escape_key)\n",
+    "export_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def close_file():\n",
+    "    activate_tigraphlink()\n",
+    "    k.tap_key(k.alt_key)\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(\"f\")\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(\"c\")\n",
+    "    sleep(0.2)\n",
+    "    k.tap_key(\"n\")\n",
+    "close_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All together\n",
+    "open_file()\n",
     "\n",
-    "    sleep(0.5)\n",
-    "    \n",
-    "    if section == 3:\n",
-    "        key_seq([k.alt_key, \"t\", \"e\", k.enter_key, k.enter_key])\n",
-    "    else:\n",
-    "        key_seq([k.alt_key, \"t\", \"e\", k.down_key, k.enter_key, k.enter_key])"
+    "export_file()\n",
+    "\n",
+    "close_file()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     20      20     417\r\n"
+     ]
+    }
+   ],
    "source": [
-    "for section in [3, 4, 7]:\n",
-    "    for thing in range(27,40):\n",
-    "        export_ti89(thing=thing)"
+    "# How many files do we need to export\n",
+    "!ls me572/*89* | wc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     10      10     206\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls me575/*89* | wc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      7       7     192\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls stat514/*89* | wc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sleep(5)\n",
-    "for section in [7]:\n",
-    "    for thing in range(1, 21):\n",
-    "        export_ti89(section=section, thing=thing)"
+    "for n in range(7):\n",
+    "    open_file(n)\n",
+    "    export_file()\n",
+    "    close_file()"
    ]
   }
  ],
@@ -171,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
